[gd_scene load_steps=4 format=3 uid="uid://b4xvn1e6wh8fy"]

[ext_resource type="Script" path="res://scripts/player/ship.gd" id="1_3h7kn"]
[ext_resource type="Texture2D" uid="uid://dthxc1rj5xmbn" path="res://assets/sprites/placeholders/ship_p1.svg" id="2_mf8pc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a3ks7"]
radius = 20.0

[node name="Ship" type="RigidBody2D"]
collision_layer = 2
collision_mask = 13
mass = 1.0
gravity_scale = 1.0
linear_damp = 0.5
angular_damp = 2.0
script = ExtResource("1_3h7kn")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_mf8pc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_a3ks7")

[node name="ShootPoint" type="Marker2D" parent="."]
position = Vector2(0, -28)

[node name="ThrustParticles" type="CPUParticles2D" parent="."]
position = Vector2(0, 28)
rotation = 3.14159
emitting = false
amount = 20
lifetime = 0.3
speed_scale = 2.0
explosiveness = 0.2
randomness = 0.5
emission_shape = 1
emission_sphere_radius = 8.0
direction = Vector2(0, 1)
spread = 30.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
scale_amount_min = 2.0
scale_amount_max = 4.0
color = Color(1, 0.6, 0.2, 1)

[node name="InvulnerabilityTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootCooldownTimer" type="Timer" parent="."]
one_shot = true
